// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs snapshot works as expected 1`] = `ShallowWrapper {}`;

exports[`focus behavior Tab Focus: does not render focus ring after click 1`] = `
.c0 {
  min-width: 3rem;
  padding-bottom: 0.75rem;
  padding-top: 0.5rem;
  padding-left: 0;
  padding-right: 0;
  font-size: 0.75rem;
  font-weight: 600;
  background: transparent;
  border: none;
  border-bottom: 3px solid;
  border-bottom-color: #6C43E0;
  border-radius: 0;
  color: #262D33;
  cursor: pointer;
}

.c0:active {
  border-bottom-color: #6C43E0;
}

.c0:active,
.c0:hover {
  border-bottom-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  border-bottom-color: #6C43E0;
}

.c0:disabled {
  border-bottom-color: transparent;
  color: #C1C6CC;
  cursor: default;
}

<button
  class="c0 "
  font-size="xsmall"
  font-weight="semiBold"
>
  tab1
</button>
`;

exports[`focus behavior Tab Focus: renders focus ring for keyboard navigation 1`] = `
.c0 {
  min-width: 3rem;
  padding-bottom: 0.75rem;
  padding-top: 0.5rem;
  padding-left: 0;
  padding-right: 0;
  font-size: 0.75rem;
  font-weight: 600;
  background: transparent;
  border: none;
  border-bottom: 3px solid;
  border-bottom-color: transparent;
  border-radius: 0;
  color: #707781;
  cursor: pointer;
  box-shadow: 0 0 0 0.15rem rgba(151,133,242,0.25);
}

.c0:active {
  border-bottom-color: #707781;
}

.c0:active,
.c0:hover {
  border-bottom-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  border-bottom-color: #C1C6CC;
}

.c0:disabled {
  border-bottom-color: transparent;
  color: #C1C6CC;
  cursor: default;
}

<button
  class="c0 "
  font-size="xsmall"
  font-weight="semiBold"
>
  tab2
</button>
`;
